# LatticeLab

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compare.py  main.cpp
.github/workflows/: build.yml  release.yml
App/: AppActions.cpp  AppActions.h  AppSignals.h  AppStateIO.cpp  AppStateIO.h  AppVersion.h.in  Application.cpp  CreateWindow.h  Scenes.cpp  Scenes.h  UserSettings.cpp  UserSettings.h
App/capture/: BufferPool.cpp  BufferPool.h  CaptureActions.cpp  CaptureActions.h  CaptureController.cpp  CaptureController.h  CaptureSettings.h  FfmpegStreamer.cpp  FfmpegStreamer.h  FrameProducer.cpp  FrameProducer.h  FrameRecorder.cpp  FrameRecorder.h
App/debug/: CreateDebugPanels.cpp  DebugRuntime.h  ProfilerTreeView.cpp  UpdateDebugData.cpp
App/interaction/: ToolsManager.cpp  ToolsManager.h
App/language_strings/: GlobalStrings.cpp  GlobalStrings.h  LanguageStringParser.cpp  LanguageStringParser.h
App/localization/: i18n.h
App/save_system/: AppSaveState.h  AppStateIO.cpp  AppStateIO.h
App/viewport/: SceneViewport.cpp  SceneViewport.h  SimulationSceneSource.h
Benchmarks/: BenchmarkCase.h  BenchmarkScenes.cpp  BenchmarkScenes.h  CMakeLists.txt  bench.py
Benchmarks/fixtures/: RendererFixture.h  SimulationFixture.h
Benchmarks/physics/: BM_ComputeForces.cpp  BM_Correct.cpp  BM_NeighborListRebuild.cpp  BM_NeighborNeedListRebuild.cpp  BM_PostProcessVelocities.cpp  BM_PredictAndSync.cpp  BM_SimulationStep.cpp  BM_SpatialGridRebuild.cpp
Benchmarks/rendering/: BM_Capture.cpp  BM_DrawShot2D.cpp  BM_DrawShot3D.cpp  RendererFixtureBase.cpp
Docs/en/: Main.md  README.md
Docs/ru/: Main.md  README.md  README.ru.md
Engine/: Consts.h  SimBox.h  Simulation.cpp  Simulation.h  World.cpp  World.h
Engine/NeighborSearch/: NeighborList.cpp  NeighborList.h  SpatialGrid.cpp  SpatialGrid.h
Engine/gpu/: GpuStepOps.cpp  (+10 more)
Lattice/: .gitignore  CMakeLists.txt
Lattice/CLI/: main.cpp
Lattice/Engine/: Simulation.cpp  Simulation.h  StepContext.h  World.cpp  World.h
Lattice/Engine/NeighborSearch/: NeighborList.cpp  NeighborList.h  SpatialGrid.cpp  SpatialGrid.h
Lattice/Engine/NeighborSearch/BarnesHut/: Octree.cpp  Octree.h
Lattice/Engine/io/: MoleculePdb.cpp  MoleculePdb.h  MoleculeTemplate.h  SimulationStateIO.cpp  XYZRecordingSession.cpp  XYZRecordingSession.h  xyzStream.cpp
Lattice/Engine/math/: Morton3D.h
Lattice/Engine/metrics/: EnergyMetrics.h  NeighborListStats.cpp
Lattice/Engine/physics/: AtomSort.cpp  AtomSort.h  AtomStorage.h  Bond.cpp  Bond.h  BondOps.cpp  BondOps.h  BondTable.cpp  BondTable.h  ForceField.cpp  ForceField.h  IForceField.h  IIntegrator.h  IThermostat.h  Integrator.cpp  Integrator.h  Morton3D.h  Registrator.hpp  StepContext.h  Thermostat.cpp  Thermostat.h  VectorField.cpp  VectorField.h
Lattice/Engine/physics/Atom/: AtomData.cpp  AtomData.h  AtomSort.cpp  AtomSort.h  AtomStorage.h
Lattice/Engine/physics/ForceFields/: BondForceField.cpp  CoulombForceField.cpp  CoulombForceField.h  WallForceField.cpp
Lattice/Engine/physics/integrators/: StepOps.h
Lattice/Generators/: Gas.cpp  Gas.h  Generators.h  HexLattice.cpp  HexLattice.h  HexTriangleBipyramid.cpp  HexTriangleBipyramid.h  LatticeFill.cpp  LatticeFill.hpp  Massive.cpp  Massive.h  RandomFill.cpp  RandomFill.hpp  Region.cpp  Region.hpp  molecules.cpp  molecules.h
Lattice/Plugins/ClassicMD/: CMakeLists.txt  ClassicMDPlugin.cpp  ClassicMDPlugin.h
Lattice/Plugins/ClassicMD/ForceFields/: BondForceField.cpp  BondForceField.h  ClassicMDForceField.cpp  ClassicMDForceField.h  CoulombForceField.cpp  CoulombForceField.h  LJForceField.cpp  LJForceField.h  WallForceField.cpp  WallForceField.h
Lattice/Plugins/ClassicMD/Integrators/: KDK.cpp  KDK.h  RK4.cpp  RK4.h  StepOps.h  Verlet.cpp  Verlet.h
Lattice/Plugins/ClassicMD/Thermostats/: Andersen.cpp  Andersen.h  Langevin.cpp  Langevin.h
Lattice/Scripting/: LuaState.cpp  LuaState.h  ScriptAPI.cpp  ScriptAPI.hpp
Lattice/benchmarks/: BenchmarkScenes.cpp  BenchmarkScenes.h  CMakeLists.txt  Fixture.h  SceneBuilder.cpp  SceneBuilder.h  bench.py  bench_main.cpp
Lattice/benchmarks/BmRunner/: BenchmarkMain.cpp  Data.cpp  Data.h  Output.cpp  Runner.cpp  Style.cpp  Style.h  Support.cpp  Support.h  Types.h
Lattice/benchmarks/physics/: BM_AtomsSort.cpp  BM_ComputeForces.cpp  BM_Correct.cpp  BM_NeighborListRebuild.cpp  BM_NeighborNeedListRebuild.cpp  BM_Octree.cpp  BM_PostProcessVelocities.cpp  BM_PredictAndSync.cpp  BM_SimulationStep.cpp  BM_SpatialGridRebuild.cpp
Lattice/tests/: CMakeLists.txt  test.cpp
Rendering/: BaseRenderer.h  BgfxCallback.h  BgfxContext.h  CMakeLists.txt  Render.h  RenderAtoms.cpp  RenderBuffers.cpp  RenderData.h  RenderFrame.cpp  RenderLines.cpp  RenderPipelines.cpp  RenderRay.h  Renderer.cpp  Renderer.h  Renderer2D.h  RendererBGFX.cpp  RendererBGFX.h  RendererCapture.cpp  RendererWGPU.cpp  RendererWGPU.h  WGPUContext.h  WebGPUImpl.cpp
Rendering/2d/: Renderer2D.cpp  Renderer2D.h  Renderer2DBGFX.cpp  Renderer2DBGFX.h  Renderer2DWGPU.cpp  Renderer2DWGPU.h
Rendering/3d/: Renderer3D.cpp  Renderer3D.h  Renderer3DBGFX.cpp  Renderer3DBGFX.h  Renderer3DWGPU.cpp  Renderer3DWGPU.h
Rendering/backend/: MetalBackend.h  MetalBackend.mm  WGPUContext.h
Rendering/benchmarks/: BM_RenderAtoms.cpp  BM_RenderBHtree.cpp  BM_RenderField.cpp  BM_RenderGrid.cpp  CMakeLists.txt  Fixture.h  SceneBuilders.h
Rendering/camera/: Camera.cpp  Camera.h
Rendering/layers/: Atoms.cpp  Bond.cpp  Field.cpp  Grid.cpp  LayerState.h  MemLine.cpp
Rendering/pipelines/: LinePipeline.cpp
Rendering/shaders/: atom2d.frag.sc  atom2d.vert.sc  atom2d.wgsl  atom3d.frag.sc  atom3d.vert.sc  atom3d.wgsl  bond.frag.sc  bond.vert.sc  box.vert.sc  field.wgsl  gradient.sh  grid.frag.sc  grid.vert.sc  grid.wgsl  line.wgsl  varying.def.sc
Rendering/tests/: CMakeLists.txt  CameraTests.cpp
Signals/: Signals.h
assets/: translate.csv
cmake/: bgfx_gen_embedded.cmake  bgfx_gen_registry.cmake  bin2c.cmake  dependencies.cmake  embedded_resources.cmake  embedded_translate.cmake  generate_translations.cmake  shaders.cmake  windows_resources.cmake  wsgl_to_h.cmake
(+204 files in other folders)
